--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,39 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row justify-content-start">
+    <div class="col-9">
+      <h2 class="my-5 col-4">新規会員登録</h2>
+      
+      <%= form_with model: @customer, url: customer_registration_path do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
+        
+        <table class="table table-borderless">
+           <tr>
+            <td><%= f.label :name, "ユーザーネーム" %></td>
+            <td><%= f.text_field :name, autofocus: true, autocomplete: "name"%></td>
+          </tr>
+        
+          <tr>
+            <td><%= f.label :email, "メールアドレス" %></td>
+            <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+          </tr>
+          
+          <tr>
+            <td><%= f.label :password, "パスワード(6文字以上)" %></td>
+            <td><%= f.password_field :password, autocomplete: "new-password" %></td>
+          </tr>
+          
+          <tr>
+            <td><%= f.label :password_confirmation, "パスワード(確認用)" %></td>
+            <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+           </tr>
+           
+           <tr>
+            <td></td>
+            <td><%= f.submit "新規登録" %></td>
+           </tr>
+        </table>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+  <%= render "public/shared/links" %>
+</div>
