--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,7 +1,12 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-<% end %>
+ <div class="row">
+    <div class="col-8">
+      <%- if controller_name != 'sessions' %>
+        <h4>既に登録済みの方</h4>
+        <%= link_to "こちら", new_session_path(resource_name) %>　からログインしてください。
+      <% end %>
+      <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+        <h4>会員登録がお済みでない方</h4>
+         <%= link_to "こちら", new_registration_path(resource_name) %>　から新規登録を行ってください。
+      <% end %>
+    </div>
+</div>
