--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-        <% if customer_signed_in? %>
+        <% if user_signed_in? %>
         
           <li>
             <%= link_to "レシピ投稿", new_recipe_path, class: 'nav-link text-light' %>
@@ -19,7 +19,11 @@
           </li>
           
           <li>
-            <%= link_to destroy_customer_session_path, method: :delete,class: 'nav-link text-light' do %>
+            <%= link_to "マイページ", user_path(current_user.id), class: 'nav-link text-light' %>
+          </li>
+          
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-out-alt"></i> ログアウト
             <% end %>
           </li>
@@ -38,13 +42,17 @@
           </li>
           
           <li>
-            <%= link_to new_customer_registration_path,class: 'nav-link text-light' do %>
+            <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post, class: 'nav-link text-light' %>
+          </li>
+          
+          <li>
+            <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
               <i class="fas fa-user-plus"></i> 新規登録
             <% end %>
           </li>
           
           <li>
-            <%= link_to new_customer_session_path ,class: 'nav-link text-light' do %>
+            <%= link_to new_user_session_path ,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-in-alt"></i> ログイン
             <% end %>
           </li>
