--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-9">
       <h2 class="my-5 col-4">新規会員登録</h2>
       
-      <%= form_with model: @customer, url: customer_registration_path do |f| %>
+      <%= form_with model: @user, url: user_registration_path do |f| %>
         <%= render "public/shared/error_messages", resource: resource %>
         
         <table class="table table-borderless">
