--- a/app/views/public/recipes/new.html.erb
+++ b/app/views/public/recipes/new.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3 offset-md-2">
+      <%= render 'layouts/error', obj: @recipe %>
       <h1 class="mt-3">新規投稿</h1>
     </div>
   </div>
