--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,21 @@
             <% end %>
           </li>
           
+        <% elsif admin_signed_in? %>
+          <li>
+            <%= link_to  recipes_path, class: 'nav-link text-light' do %>
+              <i class="fa-solid fa-bowl-food"></i>レシピ一覧
+            <% end %>
+          </li>
+          
+          <li>
+            <%= link_to "ユーザー一覧", admin_users_path, class:'nav-link text-light' %>
+          </li>
+          
+          <li>
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:'nav-link text-light' %>
+          </li>
+        
         <% else %>
           <li>
             <%= link_to root_path,class: 'nav-link text-light' do %>
