--- a/app/views/public/tagsearches/search.html.erb
+++ b/app/views/public/tagsearches/search.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::Tagsearches#search</h1>
-<p>Find me in app/views/public/tagsearches/search.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      <h1 class="mt-5 my-3">タグ = <%= @word %></h1>
+    </div>
+  </div>
+  
+  <%= render 'public/recipes/list', recipes: @recipes %>
+</div>
