--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,13 @@
-<div>
+<div class="container">
   <%= render 'layouts/flash'%>
+  
+  <div class="row">
+    <div class="col-7 offset-2 mt-5">
+      <%= render 'slide' %>
+    </div>
+  </div>
 </div>
 
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div>
 
+</div>
