--- a/app/views/public/recipes/_list.html.erb
+++ b/app/views/public/recipes/_list.html.erb
@@ -2,14 +2,14 @@
   <div class="card-list-container py-5">
     <div class="row">
     <% recipes.each do |recipe| %>
-      <div class="col-4">
+      <div class="col-md-4">
         <div class="card mx-auto mt-4 shadow-lg">
           <%= link_to recipe_path(recipe.id) do %>
             <%= image_tag recipe.get_recipe_image(500,400), class:"card-img-top"; %>
           <% end %>
           <div class="card-body">
             <div class="row">
-              <div class="col-10">
+              <div class="col-12">
                 <p class="card-title">
                   <%= link_to recipe_path(recipe.id), class:"text-dark" do %>
                     <strong><i class="far fa-flag"></i><span>　<%= recipe.name %></span></strong>
