[評価平均値]

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,6 @@
     </ul>
   </div>
   <hr />
-  <p class="copyright">
+  <p class="copyright text-center">
     © 2023 JAJAAAN Inc. All Rights Reserved.
   </p>
