--- a/app/views/public/homes/_slide.html.erb
+++ b/app/views/public/homes/_slide.html.erb
@@ -17,7 +17,7 @@
     </div>
     
     <div class="carousel-caption top-bg">
-      <p>ようこそDeliciousMeatDishへ</br>このサイトは料理投稿サイトになります</p>
+      <p>ようこそDeliciousMeatDishへ</br>このサイトはレシピ投稿サイトになります</p>
     </div>
   </div>
   
