--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -22,6 +22,11 @@ body {
 }
 
 main {
+  background-image: url('/assets/back.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.8;
   width: 100%;
   height: 100%;
   padding: 0px;
