--- a/app/views/public/recipes/new.html.erb
+++ b/app/views/public/recipes/new.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3 offset-md-2">
+    <div class="col-md-5 offset-md-2">
       <%= render 'layouts/error', obj: @recipe %>
       <h1 class="mt-3">新規投稿</h1>
     </div>
   </div>
   
   <div class="row justify-content-center">
-    <div class="col-md-auto">
+    <div class="col-md-au">
       <%= form_with model: @recipe, local: true do |f| %>
       
       <table class="table table-borderless mt-3">
