--- a/app/views/public/tagsearches/search.html.erb
+++ b/app/views/public/tagsearches/search.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-4">
-      <h1 class="mt-5 my-3">タグ = <%= @word %></h1>
+    <div class="col-3">
+      <h1 class="mt-5 my-3 bg-light">タグ = <%= @word %></h1>
     </div>
   </div>
 </div>
