--- a/app/views/public/recipes/edit.html.erb
+++ b/app/views/public/recipes/edit.html.erb
@@ -32,14 +32,18 @@
           
           <tr>
             <%= f.fields_for :recipe_ingredients do |t| %>
-            <td><%= render "recipe_ingredient_fields", f: t %></td>
+            
+            <td class="d-block">
+                <%= render "recipe_ingredient_fields", f: t %>
+            </td>
+            
             <% end %>
             <td><%= link_to_add_association "+フォームを追加", f, :recipe_ingredients, class: "btn btn-block" %></td>
           </tr>
           
           <tr>
             <%= f.fields_for :procedures do |t| %>
-            <td><%= render "procedure_fields", f: t %></td>
+            <td class="d-block"><%= render "procedure_fields", f: t %></td>
             <% end %>
             <td></td>
             <td><%= link_to_add_association "+フォームを追加", f, :procedures, class: "btn btn-block" %></td>
