--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,5 +8,5 @@
   </div>
   <hr />
   <p class="copyright text-center">
-    © 2023 JAJAAAN Inc. All Rights Reserved.
+    © 2023 Example Inc. All Rights Reserved.
   </p>
