--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -61,7 +61,7 @@
               <tr>
                 <td width="100"></td>
                 <td width=""><%= procedure.body %></td>
-                <td width="40"><%= image_tag procedure.get_process_image(100,100) %></td>
+                <td width="40"></td>
                 <td></td>
               </tr>
             </table>
