--- a/app/views/public/homes/_slide.html.erb
+++ b/app/views/public/homes/_slide.html.erb
@@ -1,19 +1,19 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <%= image_tag 'slide1.jpg', size: "600x300", class: "d-block w-100 rounded" %>
+    <div class="carousel-item active" data-interval="2000">
+      <%= image_tag 'slide1.jpg', size: "600x500", class: "d-block w-100 rounded" %>
     </div>
     
-    <div class="carousel-item">
-      <%= image_tag 'slide2.jpg', size: "600x300", class: "d-block w-100 rounded" %>
+    <div class="carousel-item" data-interval="2000">
+      <%= image_tag 'slide2.jpg', size: "600x500", class: "d-block w-100 rounded" %>
     </div>
     
-    <div class="carousel-item">
-      <%= image_tag 'slide3.jpeg', size: "600x300", class: "d-block w-100 rounded" %>
+    <div class="carousel-item" data-interval="2000">
+      <%= image_tag 'slide3.jpeg', size: "600x500", class: "d-block w-100 rounded" %>
     </div>
     
-    <div class="carousel-item">
-      <%= image_tag 'slide4.jpeg', size: "600x300", class: "d-block w-100 rounded" %>
+    <div class="carousel-item" data-interval="2000">
+      <%= image_tag 'slide4.jpeg', size: "600x500", class: "d-block w-100 rounded" %>
     </div>
     
     <div class="carousel-caption top-bg">
