--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,20 +1,20 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval="2000">
+  <div class="carousel-inner about-inner">
+    <div class="carousel-item active" data-interval="3000">
         <%= image_tag 'slide1.jpg', size: "1400x700", class:'d-block w-100' %>
     </div>
 
-    <div class="carousel-item" data-interval="2000">
+    <div class="carousel-item" data-interval="3000">
       <%= image_tag 'about1.jpg', size: "1400x700", class: 'd-block w-100' %>
     </div>
 
-    <div class="carousel-item" data-interval="2000">
-      <%= image_tag 'slide2.jpg', size: "1400x700", class: 'd-block w-100' %>
+    <div class="carousel-item" data-interval="3000">
+      <%= image_tag 'about2.jpg', size: "1400x700", class: 'd-block w-100' %>
     </div>
 
     <div class="carousel-caption about-bg">
-      <h1>About</h1>
-      <h4 class="mt-4">DeliciousMeatDishは肉料理に特化したレシピ投稿サイトです。</br>
+      <h1 class="mt-5">About</h1>
+      <h4 class="about-text mt-3">DeliciousMeatDishは肉料理に特化したレシピ投稿サイトです。</br>
       昨今菜食主義が増えている中、このサイトでは、</br>お肉料理を中心にレシピを投稿でき、レビューをすることもできます。 </br>
       肩身が狭くなってしまった肉好きさんのプラットフォームを作れたらと思いました。</h4>
     </div>
