--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,11 +1,13 @@
+  <div class="text-center top">
+    <h2>ようこそ、DeliciousMeatDishへ！</h2>
+  </div>
+
 <div class="container">
   <%= render 'layouts/flash'%>
   
-  <div class="row">
-    <div class="col-7 offset-2 mt-5">
+    <div class="mt-4">
       <%= render 'slide' %>
     </div>
-  </div>
   
   <div class="row">
     <div class="col-5">
