--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @use '~bootstrap/scss/bootstrap';
 
 .top-bg {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255,255,255,0.75);
+  color: black;
   height: 250px;
   display: flex;
   flex-direction: column;
@@ -13,14 +14,16 @@
 }
 
 .about-bg {
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 650px;
+  background-color: rgba(0,0,0,0.4);
+  height: 500px;
+  margin-bottom: 90px;
 }
 
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  height: 100%;
   margin: 0px;
   font-family: 'Hannotate SC',sans-serif;
 }
@@ -34,6 +37,17 @@ main {
   width: 100%;
   height: 100%;
   padding: 0px;
+}
+
+.top {
+  background-color: #696969;
+  height: 90px;
+  color: white;
+  padding-top: 20px;
+}
+
+.about-text {
+  padding-top: 70px;
 }
 
 footer {
