--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,74 +4,80 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
+      
+      <div class="search-form mr-3 mt-1">
+        <%= render 'layouts/search'%>
+      </div>
+      
         <% if user_signed_in? %>
-        
+
           <li>
             <%= link_to "レシピ投稿", new_recipe_path, class: 'nav-link text-light' %>
           </li>
-          
+
           <li>
             <%= link_to recipes_path, class: 'nav-link text-light' do %>
               <i class="fa-solid fa-bowl-food"></i>レシピ一覧
             <% end %>
           </li>
-          
+
           <li>
             <%= link_to "マイページ", user_path(current_user.id), class: 'nav-link text-light' %>
           </li>
-          
+
           <li>
             <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-out-alt"></i> ログアウト
             <% end %>
           </li>
-          
+
         <% elsif admin_signed_in? %>
           <li>
             <%= link_to  recipes_path, class: 'nav-link text-light' do %>
               <i class="fa-solid fa-bowl-food"></i>レシピ一覧
             <% end %>
           </li>
-          
+
           <li>
             <%= link_to "ユーザー一覧", admin_users_path, class:'nav-link text-light' %>
           </li>
-          
+
           <li>
             <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:'nav-link text-light' %>
           </li>
-        
+
         <% else %>
           <li>
             <%= link_to root_path,class: 'nav-link text-light' do %>
               <i class="fas fa-home"></i> Home
             <% end %>
           </li>
-          
+
           <li>
             <%= link_to about_path,class: 'nav-link text-light' do %>
               <i class="fas fa-link"></i> About
             <% end %>
           </li>
-          
+
           <li>
             <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post, class: 'nav-link text-light' %>
           </li>
-          
+
           <li>
             <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
               <i class="fas fa-user-plus"></i> 新規登録
             <% end %>
           </li>
-          
+
           <li>
             <%= link_to new_user_session_path ,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-in-alt"></i> ログイン
             <% end %>
           </li>
-          
+
         <% end %>
         </ul>
       </div>
