--- a/app/views/public/homes/_slide.html.erb
+++ b/app/views/public/homes/_slide.html.erb
@@ -1,5 +1,5 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-  <div class="carousel-inner">
+  <div class="carousel-inner mt-5">
     <div class="carousel-item active" data-interval="2000">
       <%= image_tag 'slide1.jpg', size: "600x500", class: "d-block w-100 rounded" %>
     </div>
@@ -9,11 +9,11 @@
     </div>
     
     <div class="carousel-item" data-interval="2000">
-      <%= image_tag 'slide3.jpeg', size: "600x500", class: "d-block w-100 rounded" %>
+      <%= image_tag 'slide3.jpg', size: "600x500", class: "d-block w-100 rounded" %>
     </div>
     
     <div class="carousel-item" data-interval="2000">
-      <%= image_tag 'slide4.jpeg', size: "600x500", class: "d-block w-100 rounded" %>
+      <%= image_tag 'slide4.jpg', size: "600x500", class: "d-block w-100 rounded" %>
     </div>
     
     <div class="carousel-caption top-bg">
