--- a/app/views/public/recipes/show.html.erb
+++ b/app/views/public/recipes/show.html.erb
@@ -44,6 +44,16 @@
           </div>
 
             <hr>
+            
+            <table class="table table-borderless">
+              <tr>
+                <th></th>
+                <th width="200">材料</th>
+                <th width="100">分量</th>
+                <th></th>
+              </tr>
+            </table>
+            
             <% @recipe.recipe_ingredients.each do |recipe_ingredient| %>
             <table class="table table-borderless mt-4">
               <tr>
