--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @use '~bootstrap/scss/bootstrap';
 
 .top-bg {
-  background-color: rgba(255,255,255,0.75);
+  background-color: rgba(245,245,245,0.55);
   color: black;
   height: 250px;
   display: flex;
@@ -10,7 +10,8 @@
   text-align: center;
   background-size: 50% 75%;
   font-size: 16px;
-  line-height: 2; 
+  line-height: 2;
+  margin-bottom: 95px;
 }
 
 .about-bg {
