--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,4 +1,4 @@
 <%= form_with url: search_path, local: true, method: :get do |f| %>
-  <%= f.text_field :word, placeholder: "料理名・タグ・食材/調味料で検索", :size=>"31x5" %>
+  <%= f.text_field :word, placeholder: "🔍 料理名・タグ・食材/調味料", :size=>"31x5" %>
   <%= f.submit "検索" %>
 <% end %>
